--- a/php/css/style.css
+++ b/php/css/style.css
@@ -1,22 +1,31 @@
+.bg-black{
+background-color: black;
+}
+
 body {
     background-color: black;
     font-size: 16px;
 }
 
 main {
-    width: 60%;
-    margin: 0 auto;
-    
+    margin:0 auto;
 }
 
 header {
-    height:200px;
-    background-color:red;
+    height:320px;
+    width:20%;
+    color:red;
+    margin-left:40%;
+    align-content: center;
 }
 
 p {
-    font-size: 1.4em;
-    text-align: center;
+    font-size: 1.5em;
+    text-align: left;
+    margin-top:10%; 
+    padding: 5px;
+    padding-top:2px;   
+    
 
 }
 
@@ -24,9 +33,18 @@ ul {
     list-style: none;
     display: flex;
     justify-content: space-evenly;
-    background-color: red; 
-    height:40px;
     font-size:2em;
-    
+    height:100px;
+    text-align:center;
+}
+a{
+    text-decoration:none;
 }
 
+.hi {
+    float:left;
+}
+
+.logo {
+    margin-left:40%;
+}
